# mcp-trader

./: .env.example  .gitignore  Dockerfile  INSTALL.md  LICENSE  README.md  pyproject.toml  pytest.ini  smithery.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: lint.yml  release.yml  test.yml
src/mcp_trader/: __init__.py  __main__.py  config.py  data.py  indicators.py  models.py  server.py
src/mcp_trader/tests/: test_analyze_crypto.py  test_config.py  test_http_server.py  test_indicators.py  test_indicators_extra.py  test_marketdata_crypto.py  test_models.py  test_relative_strength.py  test_server.py  test_server_edge_cases.py  test_server_startup.py  test_smoke.py
